--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -22,6 +22,10 @@
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "import scipy.optimize as optim\n",
+    "from scipy.integrate import odeint\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "import lmfit\n",
     "\n",
     "from IPython.display import Image\n",
     "\n",
@@ -80,8 +84,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.2 s, sys: 78.6 ms, total: 4.28 s\n",
-      "Wall time: 3.3 s\n"
+      "CPU times: user 2.87 s, sys: 50.5 ms, total: 2.92 s\n",
+      "Wall time: 2.92 s\n"
      ]
     }
    ],
@@ -192,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.762771584857515 1.0954955640469293\n"
+      "1.7627715848575154 1.0954955640469293\n"
      ]
     }
    ],
@@ -234,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99999.99999999999 0.1428071579552247 952108.7841164037\n"
+      "99999.99999999985 0.14280715794750318 952108.7843334848\n"
      ]
     }
    ],
@@ -279,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3046590451035867 0.11428324197506623\n"
+      "1.304659045103586 0.11428324197506624\n"
      ]
     }
    ],
@@ -317,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c1b3dd908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1289ef1d0>"
       ]
      },
      "execution_count": 10,
@@ -573,8 +577,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.38 s, sys: 17.1 ms, total: 4.4 s\n",
-      "Wall time: 4.39 s\n"
+      "CPU times: user 4.22 s, sys: 34.9 ms, total: 4.26 s\n",
+      "Wall time: 4.17 s\n"
      ]
     }
    ],
@@ -650,6 +654,33 @@
     "ax2.axhline(y=1, linewidth=0.5, ls = \"--\",color=c2, label=\"Rt=1\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://medium.com/analytics-vidhya/calculating-the-reproduction-number-ro-of-covid-19-in-india-and-visualizing-the-same-using-e9a5d35ca64c\n",
+    "# r_o = np.exp((((np.log(POPULATION/((1/(df[list(df)[i]][size-1]/(df[list(df)[i]][size-LOOKBACK]*POPULATION)))-1)))/(LOOKBACK-1))))\n",
+    "# EXP((LN(Population/((1/(case[current]/(case[start]*Population)))-1)))/(current-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df = data[(data.date=='2020-07-28') & (data.iso_code.notnull()) & ~(data.iso_code.isin(['OWID_KOS','OWID_WRL']))].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -668,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
