--- a/dataviz_test.ipynb
+++ b/dataviz_test.ipynb
@@ -13,40 +13,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/genie/data/covid-19/owid-covid-data.csv')\n",
-    "df = df[(df.iso_code.notnull()) & ~(df.iso_code.isin(['OWID_KOS','OWID_WRL']))]\n",
-    "df = df.sort_values(by=['date'])\n",
-    "df['new_date'] = pd.to_datetime(df['date']).dt.strftime('%Y-%U')\n",
-    "\n",
-    "# df['new_cases'] = df.mask(df['new_cases'] < 0, np.nan)\n",
-    "df['new_cases'] = df.apply(lambda x:x['new_cases'] if x['new_cases'] >=0 else np.nan, axis=1)\n",
-    "\n",
-    "df_latest = df[df.date == df.date.max()]"
+    "data = pd.read_csv('/Users/genie/data/covid-19/owid-covid-data.csv')\n",
+    "data = data[(data.iso_code.notnull()) & ~(data.iso_code.isin(['OWID_KOS','OWID_WRL']))]\n",
+    "data = data.rename(columns={'location':'country_name'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Viz - Daily New cases"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(207, 35)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_latest.shape"
+    "df = data\n",
+    "\n",
+    "df = df.sort_values(by=['date'])\n",
+    "df['new_cases'] = df.apply(lambda x:x['new_cases'] if x['new_cases'] >=0 else np.nan, axis=1)"
    ]
   },
   {
@@ -57,14 +57,76 @@
    "source": [
     "fig = px.choropleth(df, locations=\"iso_code\",\n",
     "                    color=\"new_cases\",\n",
-    "                    hover_name=\"location\",\n",
+    "                    hover_name=\"country_name\",\n",
     "                    animation_frame=\"date\",\n",
     "                    title = \"Daily new COVID cases\",\n",
     "                    color_continuous_scale=px.colors.sequential.OrRd)\n",
     "\n",
     "fig[\"layout\"].pop(\"updatemenus\")\n",
     "# fig.show()\n",
-    "fig.write_html(\"file.html\")"
+    "fig.write_html(\"daily_new_cases.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Viz - Time taken for the first case and first 1000 cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data[(data.iso_code.notnull()) & ~(data.iso_code.isin(['OWID_KOS','OWID_WRL']))].copy()\n",
+    "\n",
+    "first_case_data = df[df.total_cases > 0].groupby(['iso_code'])['date'].min().reset_index()\n",
+    "first_case_data = first_case_data.rename(columns={'date':'first_case_date'})\n",
+    "df = pd.merge(df, first_case_data, how='left', on=['iso_code'])\n",
+    "\n",
+    "df['days_until_first_case'] = (pd.to_datetime(df['first_case_date'])-pd.to_datetime(df['date'].min())).dt.days\n",
+    "\n",
+    "cases_1000_data = df[df.total_cases>=1000].groupby(['iso_code'])['date'].min().reset_index()\n",
+    "cases_1000_data = cases_1000_data.rename(columns={'date':'cases_1000_date'})\n",
+    "df = pd.merge(df, cases_1000_data, how='left', on=['iso_code'])\n",
+    "df['days_until_1000_cases'] = (pd.to_datetime(df['cases_1000_date'])-pd.to_datetime(df['first_case_date'])).dt.days\n",
+    "\n",
+    "df = df[['iso_code','country_name','first_case_date','days_until_first_case','cases_1000_date','days_until_1000_cases']].drop_duplicates()\n",
+    "\n",
+    "del first_case_data\n",
+    "del cases_1000_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.choropleth(df, locations=\"iso_code\",\n",
+    "                    color=\"days_until_first_case\",\n",
+    "                    hover_name=\"country_name\",\n",
+    "                    title = \"Days until the first reported case\",\n",
+    "                    color_continuous_scale='OrRd_r')\n",
+    "\n",
+    "fig.write_html(\"days_until_first_case.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.choropleth(df, locations=\"iso_code\",\n",
+    "                    color=\"days_until_1000_cases\",\n",
+    "                    hover_name=\"country_name\",\n",
+    "                    title = \"Days until 1000 cases\",\n",
+    "                    color_continuous_scale='OrRd_r')\n",
+    "\n",
+    "fig.write_html(\"days_until_1000_cases.html\")"
    ]
   },
   {
